--- a/css/index.css
+++ b/css/index.css
@@ -113,13 +113,44 @@ h1 {
 }
 
 select {
-    font-size: 100%;
+    font-size: 75%;
+    background: #EEE;
 }
 input {
     font-size: 100%;
 }
 
+.main
+{
+    font-size: 200%;
+    line-height: 150%;
+    padding: 5px;
+}
 #info {
     background: white;
     border: 2px solid;
+}
+.checkBox {
+    width: 50px;
+    height: 50px;
+    vertical-align: middle;
+}
+.label {
+    vertical-align: middle;
+}
+.list {
+    margin: 0px;
+    padding: 0px;
+}
+.list li {
+    list-style: none;
+    border: 1px solid;
+    padding: 5px;
+}
+.list h1 {
+    display: inline;
+    vertical-align: middle;
+}
+#zmenitNastaveniButton {
+    width: 100%;
 }
